[package]
name = "cutefetch"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A cute and simple system information tool like neofetch"
repository = "https://github.com/skycloudd/cutefetch"
readme = "README.md"
keywords = ["cli", "terminal", "system", "fetch", "neofetch"]
categories = ["command-line-utilities"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
colored = "2.0.0"
sysinfo = "0.28.4"
whoami = { version = "1.4.0", default-features = false }
