[package]
name = "cutefetch"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A cute and simple system information tool like neofetch"
repository = "https://github.com/skycloudd/cutefetch"
readme = "README.md"
keywords = ["cli", "terminal", "system", "fetch", "neofetch"]
categories = ["command-line-utilities"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
colored = "2.0.0"
machine-info = "1.0.9"
once_cell = "1.17.1"
uptime_lib = "0.2.2"
whoami = { version = "1.4.0", default-features = false }
